[package]
name = "catsay"
version = "0.1.0"
authors = ["94praneeth <94praneeth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
colored = "1.7.0"
failure = "0.1.5"
exitfailure = "0.5.1"
predicates = "2.1.1"
assert_cmd = "2.0.4"